# video-trimmer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dev/: probe_audio_devices.cpp  refresh-install.sh
packaging/: video-trimmer.desktop.in  vtrim.desktop.in
src/: MainWindow.cpp  MainWindow.h  TrimDialog.cpp  TrimDialog.h  VideoSession.cpp  VideoSession.h  main.cpp
src/ffmpeg/: FfmpegTrimRunner.cpp  FfmpegTrimRunner.h  FfprobeRunner.cpp  FfprobeRunner.h  MediaInfo.h
src/player/: PlayerWidget.cpp  PlayerWidget.h  TransportBar.cpp  TransportBar.h
src/timeline/: TimelineWidget.cpp  TimelineWidget.h
src/util/: TimeFormat.cpp  TimeFormat.h
